# github-workshop

./: .gitignore  GitHub-Workshop-SecuriThings.pptx  INSTRUCTOR-GUIDE.md  README.md  START-HERE.md  build-pptx.js  package-lock.json  package.json  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: 01-basic-ci.yml  03-reusable-workflow.yml  04-manual-trigger.yml  ci.yml  deploy-slides.yml  release.yml  reusable-validate.yml
modules/01-github-collaboration/: README.md  branch-protection-guide.md  draft-prs-and-templates.md  gh-cli-daily-workflows.md  gh-login-clone-fork.md  gitlab-github-mapping.md  pr-lifecycle.md  quick-ui-flows.md  repository-lifecycle.md
modules/02-github-actions/: 10-permissions.md  README.md  caching-and-matrix.md  core-concepts.md  environments-and-approvals.md  jenkins-github-actions-comparison.md  job-orchestration.md  manual-triggers.md  marketplace-actions.md  passing-data.md  reusable-workflows.md  runners-guide.md  secrets-variables-environments.md  security-best-practices.md
modules/03-operations-debugging/: README.md  artifacts.md  debugging-guide.md  monitoring-and-reruns.md
resources/: cheatsheet.md
resources/presentation/: README.md  _validate.py  build_pptx.py  build_pr_tour.py  github-pr-tour.pptx  gitlab-to-github-slides.md  gitlab-to-github.pptx
slides/: README.md  gen_slides.py  package-lock.json  package.json  slides.md  style.css
solutions/01-pr-workflow/: README.md  app.py  test_app.py
solutions/02-ci-workflow/: README.md
src/: app.py  pyproject.toml  test_app.py
(+20 files in other folders)
